Team reports from all events
Add endpoint to get all reports across all events for one team.
